// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupView render actual content render toggles view: ad-hoc tools 1`] = `
<DocumentFragment>
  <div
    class="ms-Fabric ad-hoc-tools-panel"
  >
    <mock-launchpanelheader
      deps="[object Object]"
      featureflags="[object Object]"
      title="test title"
    />
    <mock-adhoctoolspanel />
  </div>
  <mock-telemetrypermissiondialog
    deps="[object Object]"
    isfirsttime="true"
  />
</DocumentFragment>
`;

exports[`PopupView render actual content render toggles view: launch pad 1`] = `
<DocumentFragment>
  <div
    class="ms-Fabric launch-panel"
    id="new-launch-pad"
  >
    <mock-launchpanelheader
      deps="[object Object]"
      featureflags="[object Object]"
      subtitle="[object Object]"
      title="test title"
    />
    <mock-launchpad
      deps="[object Object]"
      productname="test title"
      version="2"
    />
  </div>
  <mock-telemetrypermissiondialog
    deps="[object Object]"
    isfirsttime="true"
  />
</DocumentFragment>
`;

exports[`PopupView render actual content render toggles view: launch pad: subtitle 1`] = `
<DocumentFragment>
  <mock-newtablink
    href="https://go.microsoft.com/fwlink/?linkid=2082374"
  >
    Watch 3-minute video introduction
  </mock-newtablink>
   
</DocumentFragment>
`;

exports[`PopupView render actual content renderAdHocToolsPanel 1`] = `
<DocumentFragment>
  <div
    class="ms-Fabric ad-hoc-tools-panel"
  >
    <mock-launchpanelheader
      deps="[object Object]"
      featureflags="[object Object]"
      title="test title"
    />
    <mock-adhoctoolspanel />
  </div>
  <mock-telemetrypermissiondialog
    deps="[object Object]"
    isfirsttime="true"
  />
</DocumentFragment>
`;

exports[`PopupView render spinner 1`] = `
<StyledSpinnerBase
  className="insights-spinner"
  label="Loading..."
  size={3}
/>
`;

exports[`PopupView renderFailureMsgPanelForChromeUrl 1`] = `
<div
  className="ms-Fabric unsupported-url-info-panel"
>
  <Header
    title="test title"
  />
  <div
    className="main-section"
  >
    <div
      className="popup-grid"
    >
      <div
        className="launch-panel-general-container"
      >
        <React.Fragment>
          <span>
            Accessibility Insights for Web can't run on this URL.
          </span>
          <br />
          <span>
            You'll need to go to a different page.
          </span>
        </React.Fragment>
      </div>
    </div>
  </div>
</div>
`;

exports[`PopupView renderFailureMsgPanelForFileUrl 1`] = `
<DocumentFragment>
  <mock-fileurlunsupportedmessagepanel
    deps="[object Object]"
    header="[object Object]"
    title="test title"
  />
</DocumentFragment>
`;
